# LifeTracker

./: .dockerignore  .env.example  .gitignore  Dockerfile.fly  Makefile  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml
backend/: Dockerfile
backend/app/: __main__.py  api.py  auth.py  db.py  logging.py  main.py  models.py  schemas.py
backend/tests/: test_api.py
docs/: Tasks.md  activity-tracker.jsx  api-contract.md  deployment-fly.md  development-plan.md  overview.md
fly/: nginx.conf  start.sh
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  api.ts  pwa.ts  styles.css
frontend/src/components/: ActivityButtons.tsx  ActivityForm.tsx  AuthForm.tsx  StatsSummary.tsx  YearHeatmap.tsx
migrations/: env.py
migrations/versions/: 20260426_0001_initial_schema.py
